# cxx_differential_equations

./: .gitignore  CMakeLists.txt  README.md  test_functions.h  test_ordinary_diff_eq.cpp
include/emsr/: ode.h  ode.tcc
include/ext/: ode.h  ode.tcc
test/include/: test_functions.h
test/src/: test_ordinary_diff_eq.cpp
